build: support for MSVC 2015 C/C++ Compiler Version 19.00.23506

--- a/range/CMakeLists.txt
+++ b/range/CMakeLists.txt
@@ -26,11 +26,19 @@ find_package(Boost 1.59 COMPONENTS system REQUIRED)
 include_directories(${Boost_INCLUDE_DIR})
 set(LIBRARIES ${LIBRARIES} ${Boost_LIBRARIES})
 
-add_definitions(-DCLANG)
-	
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -stdlib=libc++ -Wall -pedantic -Wno-long-long -Wno-parentheses -Wno-unknown-pragmas -Wno-extra-semi -Wno-unused-function -Wno-unused-variable -Wno-unused-value -Wno-unused-private-field -fms-extensions -fdelayed-template-parsing")
-set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -stdlib=libc++")
+if (MSVC)
+	add_definitions(-DBOOST_ALL_NO_LIB -D_SCL_SECURE_NO_WARNINGS)
 
+	set(CMAKE_CXX_FLAGS_DEBUG "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1")
+    set(CMAKE_CXX_FLAGS_MINSIZEREL     "/MT /O1 /Ob1 /D NDEBUG")
+    set(CMAKE_CXX_FLAGS_RELEASE        "/MT /O2 /Ob2 /D NDEBUG")
+    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "/MT /Zi /O2 /Ob1 /D NDEBUG")
+else ()
+	add_definitions(-DCLANG)
+
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -stdlib=libc++ -Wall -pedantic -Wno-long-long -Wno-parentheses -Wno-unknown-pragmas -Wno-extra-semi -Wno-unused-function -Wno-unused-variable -Wno-unused-value -Wno-unused-private-field -fms-extensions -fdelayed-template-parsing")
+	set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -stdlib=libc++")
+endif()
 
 # Define Sources
 set(Ranges
@@ -53,7 +61,7 @@ set(Ranges
 	transform_adaptor.h
 	for_each.h
 	equal.h
-	empty.h 
+	empty.h
 	size.h
 	algorithm.h
 	intersection_adaptor.h
