update from main repo

--- a/range/CMakeLists.txt
+++ b/range/CMakeLists.txt
@@ -41,109 +41,110 @@ else ()
 endif()
 
 # Define Sources
-set(Ranges
-	range_defines.h
-	range_fwd.h
-	meta.h
-	container_traits.h
-	break_or_continue.h
-	partition_iterator.h
-	partition_range.h
-	index_range.h
-	index_iterator.h
-	quantifier.h
-	range_adaptor.h
-	reverse_adaptor.h
-	sparse_adaptor.h
-	sub_range.h
-	filter_adaptor.h
-	transform.h
-	transform_adaptor.h
-	for_each.h
-	equal.h
-	empty.h
-	size.h
+set(Header
+	accumulator.h
 	algorithm.h
-	intersection_adaptor.h
-	join_adaptor.h
-	types.h
-	union_adaptor.h
-	unique_range_adaptor.h
-	range.h
-   )
-source_group(Ranges FILES ${Ranges})
-
-set(TC_Utils
 	array.h
 	as_lvalue.h
 	assign.h
+	bool_cast.h
+	break_or_continue.h
 	casts.h
 	compare.h
 	container.h
+	container_traits.h
 	convert.h
 	counting_range.h
 	empty_chain.h
+	empty.h
+	equal.h
+	filter_adaptor.h
+	flatten_adaptor.h
+	for_each.h
+	functors.h
+	has_mem_fn.h
 	implements_compare.h
+	index_iterator.h
+	index_range.h
+	inherit_ctors.h
+	inplace.h
+	intersection_adaptor.h
 	is_static_castable.h
+	join_adaptor.h
 	make_lazy.h
+	merge_ranges.h
+	meta.h
+	minmax.h
 	modified.h
 	noncopyable.h
+	partition_iterator.h
+	partition_range.h
+	quantifier.h
+	range_adaptor.h
+	range_defines.h
+	range_fwd.h
+	range.h
 	reference_or_value.h
 	renew.h
-	return_decltype.h
-	trivial_functors.h
-	static_polymorphism.h
 	result_of.h
+	return_decltype.h
+	reverse_adaptor.h
 	round.h
-	tc_move.h
-	storage_for.h
-	functors.h
-	accumulator.h
-	type_traits.h
-	has_mem_fn.h
 	scope.h
+	size.h
+	sparse_adaptor.h
+	static_polymorphism.h
+	storage_for.h
+	sub_range.h
+	tc_move.h
+	transform_adaptor.h
+	transform.h
+	trivial_functors.h
+	types.h
+	type_traits.h
+	union_adaptor.h
+	unique_range_adaptor.h
+	zip_range.h
    )
-source_group(Utilities FILES ${TC_Utils})
+source_group(Header FILES ${Header})
 
 set(Tests
-	  range.t.h
-	  range.t.cpp
-	  equal.t.cpp
-	  for_each.t.cpp
-	  create.t.cpp
-	  empty.t.cpp
-	  const.t.cpp
-	  compat.t.cpp
-	  algorithm.t.cpp
-	  sub_range.t.cpp
-	  transform.t.cpp
-	  reverse_adaptor.t.cpp
-	  type_traits_t.cpp
+	range.t.h
+	algorithm.t.cpp
+	compat.t.cpp
+	const.t.cpp
+	create.t.cpp
+	empty.t.cpp
+	equal.t.cpp
+	for_each.t.cpp
+	merge_ranges.t.cpp
+	range.t.cpp
+	reverse_adaptor.t.cpp
+	sub_range.t.cpp
+	transform.t.cpp
+	type_traits_t.cpp
 )
 source_group(Tests FILES ${Tests})
 
 set(Examples
-	  range.example.cpp
+	range.example.cpp
 )
 source_group(Examples FILES ${Examples})
 
 set(Build
-	  CMakeLists.txt
+	CMakeLists.txt
 )
 source_group(Build FILES ${Build})
 
 
 # create a test runner
-include_directories(".."           # include Utilities
-					"../../.."     # include code (for error Reporting)
-				   )
 add_definitions(-DRANGE_PROPOSAL_BUILD_STANDALONE -DPERFORMUNITTESTS -DBOOST_RANGE_ENABLE_CONCEPT_ASSERT=0)
 
 foreach(Example ${Examples})
-	add_executable(example_${Example} ${Build} ${Ranges} ${TC_Utils} ${Tests} ${Example})
+	add_executable(example_${Example} ${Build} ${Header} ${Tests} ${Example})
     target_link_libraries(example_${Example} ${LIBRARIES})
 endforeach()
 
-CreateStandalone("StandaloneRanges/Library/Utilities/Range" FILES ${Build} ${Ranges} ${TC_Utils} ${Tests} ${Examples})
+CreateStandalone("StandaloneRanges/Library/Utilities/Range" FILES ${Build} ${Header} ${Tests} ${Examples})
 
 
