--- a/range/CMakeLists.txt
+++ b/range/CMakeLists.txt
@@ -36,7 +36,7 @@ if (MSVC)
 else ()
 	set(CMAKE_CXX_COMPILER "clang++")
 
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -stdlib=libc++ -Wall -pedantic -Wno-parentheses -Wno-unknown-pragmas -Wno-unused-function -Wno-unused-variable -Wno-unused-value -Wno-undefined-inline -fms-extensions -fdelayed-template-parsing")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -stdlib=libc++ -Wall -pedantic -Wno-parentheses -Wno-unknown-pragmas -Wno-unused-function -Wno-unused-variable -Wno-unused-value -Wno-undefined-inline -Wno-gnu-zero-variadic-macro-arguments -fms-extensions -fdelayed-template-parsing")
 	set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -stdlib=libc++")
 endif()
 
@@ -47,31 +47,41 @@ set(Header
 	array.h
 	as_lvalue.h
 	assign.h
+	binary_operators.h
+	bit_cast.h
+	bitfield.h
 	bool_cast.h
 	break_or_continue.h
 	casts.h
 	compare.h
+	conditional.h
 	const_forward.h
 	container.h
 	container_traits.h
 	counting_range.h
-	empty.h
+	dense_map.h
 	empty_chain.h
+	empty.h
+	enum.h
 	equal.h
 	equality_comparable.h
 	explicit_cast.h
 	filter_adaptor.h
 	flatten_adaptor.h
-	for_each.h
 	for_each_adjacent_tuple.h
+	for_each.h
 	functors.h
+	generic_macros.h
 	has_mem_fn.h
 	implements_compare.h
+	indexed_variant.h
 	index_iterator.h
 	index_range.h
 	inherit_ctors.h
 	inplace.h
 	intersection_adaptor.h
+	interval.h
+	interval_types.h
 	invoke_with_constant.h
 	is_static_castable.h
 	join_adaptor.h
@@ -84,11 +94,11 @@ set(Header
 	partition_iterator.h
 	partition_range.h
 	quantifier.h
-	range.h
-	range.t.h
 	range_adaptor.h
 	range_defines.h
 	range_fwd.h
+	range.h
+	range.t.h
 	reference_or_value.h
 	renew.h
 	result_of.h
@@ -98,15 +108,16 @@ set(Header
 	scope.h
 	size.h
 	sparse_adaptor.h
+	spirit.h
 	static_polymorphism.h
 	storage_for.h
 	sub_range.h
 	tc_move.h
-	transform.h
 	transform_adaptor.h
+	transform.h
 	trivial_functors.h
-	type_traits.h
 	types.h
+	type_traits.h
 	union_adaptor.h
 	unique_range_adaptor.h
 	utility.h
@@ -116,16 +127,20 @@ source_group(Header FILES ${Header})
 
 set(Tests
 	algorithm.t.cpp
+	bitfield.t.cpp
 	compat.t.cpp
 	const.t.cpp
 	create.t.cpp
+	dense_map.t.cpp
 	empty.t.cpp
 	equal.t.cpp
 	for_each.t.cpp
+	interval.t.cpp
 	join_adaptor.t.cpp
 	merge_ranges.t.cpp
 	range.t.cpp
 	reverse_adaptor.t.cpp
+	round.t.cpp
 	sub_range.t.cpp
 	transform.t.cpp
 	type_traits.t.cpp
