--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
 
         include:
           - config: release
-            cpp_flags: -O3 -I$GITHUB_WORKSPACE/boost_1_75_0/
+            cpp_flags: -O3
           - config: debug
-            cpp_flags: -g -O0 -D_DEBUG -I$GITHUB_WORKSPACE/boost_1_75_0/
+            cpp_flags: -g -O0 -D_DEBUG
 
     # The type of runner that the job will run on
     runs-on: ${{ matrix.os }}
@@ -32,22 +32,28 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup Boost 1.75.0
-      shell: bash
-      run: |
-        curl -L https://boostorg.jfrog.io/artifactory/main/release/1.75.0/source/boost_1_75_0.zip --output boost_1_75_0.zip
-        unzip -q boost_1_75_0.zip
+      run: brew install boost
 
-    - name: Compile with Clang 14
-      run: clang++ range.example.cpp -std=c++2a ${{matrix.cpp_flags}} -o example_clang -v
+    - name: Install cmake
+      run: brew install cmake
 
-    - name: Run example
-      run: ./example_clang
-
-    - name: Get GCC 12 
+   - name: Get GCC 12 
       run: brew install gcc@12
 
-    - name: Compile with GCC
-      run: g++-12 range.example.cpp -std=c++2b ${{matrix.cpp_flags}} -o example_gcc -v
+    - name: CMake configure for Clang 14
+      run: cmake -S . -B build
+    
+    - name: Compile with Clang
+      run: cmake --build build
 
-    - name: Run example
-      run: ./example_gcc
+    - name: Run tests
+      run: cmake --build build --target tests
+
+    - name: CMake configure for GCC 12
+      run: cmake -S . -B buildgcc -D CMAKE_C_COMPILER=gcc-12 -D CMAKE_CXX_COMPILER=g++-12
+    
+    - name: Compile with GCC
+      run: cmake --build buildgcc
+
+    - name: Run tests
+      run: cmake --build buildgcc --target tests
