--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, ubuntu-22.04]
+        compiler: [g++-12, clang++-13]
         config: [release, debug]
 
     # The type of runner that the job will run on
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -33,10 +33,14 @@ jobs:
     - name: CMake configure
       if: matrix.config == 'debug'
       run: cmake -S . -B build -DBoost_INCLUDE_DIR=$GITHUB_WORKSPACE/boost_1_75_0/ -DBoost_LIBRARY_DIR=$GITHUB_WORKSPACE/boost_1_75_0/
+      env:
+        CXX: ${{ matrix.compiler }}
 
     - name: CMake configure
       if: matrix.config == 'release'
       run: cmake -S . -B build -D CMAKE_BUILD_TYPE=Release -DBoost_INCLUDE_DIR=$GITHUB_WORKSPACE/boost_1_75_0/ -DBoost_LIBRARY_DIR=$GITHUB_WORKSPACE/boost_1_75_0/
+      env:
+        CXX: ${{ matrix.compiler }}
 
     - name: Compile
       run: cmake --build build
